# HomeWork_2

./: fast_ranking.cpp  locally_adaptive_thresholding.tif  merge_ranking.cpp  otsu_thresholding.tif  task_1_main.cpp  task_2_main.cpp  task_3_otsu_thresholding.cpp  task_4_locally_adaptive.cpp  task_6_multi_thresholding(some unsolved probelms existing).cpp
HomeWork2 Segementation&Sort/Task1_Manual_Threshold/: Task1_Manual_Threshold.sln
HomeWork2 Segementation&Sort/Task1_Manual_Threshold/Task1_Manual_Threshold/: Task1_Manual_Threshold.cpp  Task1_Manual_Threshold.vcxproj  (+1 more)
HomeWork2 Segementation&Sort/Task2_Auto_Threshold/: Task2_Auto_Threshold.sln
HomeWork2 Segementation&Sort/Task3_Otsu_Threshold/: Task3_Otsu_Threshold.sln
HomeWork2 Segementation&Sort/Task4_Locally_Adaptive_Threshold/: Task4_Locally_Adaptive_Threshold.sln
HomeWork2 Segementation&Sort/Task5_Quick_Sort/: Task5_Quick_Sort.sln
HomeWork2 Segementation&Sort/Task6_Merge_Sort/: Task6_Merge_Sort.sln
Homework_2_fanmoshang/: CMakeLists.txt  ThresholdMethods.cpp  ThresholdMethods.h  WatershedMethod.cpp  WatershedMethod.h  main.cpp
ImgSeg/: Functions.cpp  ImgSeg.h  Main.cpp
Sort/: Functions.cpp  Main.cpp  Sort.h
homework2_liujunyuan/image_segmentation/: image_segmentation.sln
homework2_liujunyuan/sort_fortest/: sort_fortest.sln
img_seg/: img_seg.cpp  img_seg.vcxproj  img_seg.vcxproj.filters  stdafx.cpp
图像分割，排序/: 图像分割.sln
图像分割，排序/图像分割/: mergeSort.cpp  quickSort.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  图像分割.vcxproj  图像分割.vcxproj.filters  源.cpp
(+132 files in other folders)
